// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transactions matches snapshot with no transactions 1`] = `
<div>
  <TransactionDialog
    account={
      Object {
        "currency": "CAD",
        "id": 1,
        "institution": "TD",
        "name": "Checking",
      }
    }
    onCancel={[Function]}
    open={false}
    transaction={null}
  />
  <div
    className="TransactionsTableComponent-tableWrapper-1 "
  >
    <div
      className="MuiToolbar-root-19 MuiToolbar-regular-21 MuiToolbar-gutters-20 TableToolbar-root-14"
    >
      <div
        className="TableToolbar-title-18"
      >
        <div>
          <h6
            className="MuiTypography-root-23 MuiTypography-h6-40"
          >
            TD - Checking
          </h6>
          <span
            className="MuiTypography-root-23 MuiTypography-caption-33"
          >
            CAD
          </span>
        </div>
      </div>
      <div
        className="TableToolbar-spacer-16"
      />
      <div
        className="TableToolbar-actions-17"
      >
        <div
          className="withRouter-TransactionsToolbarComponent--buttons-9"
        >
          <div
            className="withRouter-TransactionsToolbarComponent--search-10"
          >
            <div
              className="withRouter-TransactionsToolbarComponent--searchIcon-11"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-59"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <div
              className="MuiInputBase-root-68 withRouter-TransactionsToolbarComponent--inputRoot-12"
              onClick={[Function]}
            >
              <input
                className="MuiInputBase-input-78 withRouter-TransactionsToolbarComponent--inputInput-13"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Search…"
                type="text"
                value=""
              />
            </div>
          </div>
          <a
            aria-current={null}
            aria-describedby={null}
            aria-label="Import transaction"
            className="MuiButtonBase-root-99 MuiIconButton-root-93"
            href="/accounts/1/import"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
            title="Import transaction"
          >
            <span
              className="MuiIconButton-label-98"
            >
              <svg
                className="withRouter-TransactionsToolbarComponent--importButton-8"
                style={
                  Object {
                    "width": "1.5rem",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M14,12L10,8V11H2V13H10V16M20,18V6C20,4.89 19.1,4 18,4H6C4.9,4 4,4.9 4,6V9H6V6H18V18H6V15H4V18C4,19.1 4.9,20 6,20H18C19.1,20 20,19.1 20,18Z"
                  style={Object {}}
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-112"
            />
          </a>
          <button
            aria-describedby={null}
            aria-label="New transaction"
            className="MuiButtonBase-root-99 MuiIconButton-root-93"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            title="New transaction"
            type="button"
          >
            <span
              className="MuiIconButton-label-98"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-59"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-112"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": 0,
          "overflow": "visible",
          "width": 0,
        }
      }
    >
      <div
        aria-colcount={6}
        aria-rowcount={1}
        className="ReactVirtualized__Table"
        role="grid"
        style={Object {}}
      >
        <div
          className="ReactVirtualized__Table__headerRow TransactionsTableComponent-headerRow-2 TransactionsTableComponent-oddRow-5"
          role="row"
          style={
            Object {
              "height": 25,
              "overflow": "hidden",
              "paddingRight": 0,
              "width": 0,
            }
          }
        >
          <div
            className="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 40px",
                "flex": "0 1 40px",
                "msFlex": "0 1 40px",
              }
            }
          >
            <span
              className="ReactVirtualized__Table__headerTruncatedText"
            >
              <span
                className="MuiButtonBase-root-99 MuiIconButton-root-93 MuiPrivateSwitchBase-root-108 MuiCheckbox-root-102 MuiCheckbox-colorSecondary-107"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-98"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-59"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-111"
                    data-indeterminate={false}
                    onChange={[Function]}
                    type="checkbox"
                  />
                </span>
                <span
                  className="MuiTouchRipple-root-112"
                />
              </span>
            </span>
          </div>
          <div
            aria-label="Date"
            aria-sort="descending"
            className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 120px",
                "flex": "0 1 120px",
                "msFlex": "0 1 120px",
              }
            }
            tabIndex={0}
          >
            <span
              className="ReactVirtualized__Table__headerTruncatedText"
              title="Date"
            >
              Date
            </span>
            <svg
              className="ReactVirtualized__Table__sortableHeaderIcon ReactVirtualized__Table__sortableHeaderIcon--DESC"
              height={18}
              viewBox="0 0 24 24"
              width={18}
            >
              <path
                d="M7 10l5 5 5-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "1 1 200px",
                "flex": "1 1 200px",
                "msFlex": "1 1 200px",
              }
            }
          >
            <span
              className="ReactVirtualized__Table__headerTruncatedText"
              title="Description"
            >
              Description
            </span>
          </div>
          <div
            aria-label="In"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 130px",
                "flex": "0 1 130px",
                "msFlex": "0 1 130px",
              }
            }
            tabIndex={0}
          >
            <span
              className="ReactVirtualized__Table__headerTruncatedText"
              title="In"
            >
              In
            </span>
          </div>
          <div
            aria-label="Out"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 130px",
                "flex": "0 1 130px",
                "msFlex": "0 1 130px",
              }
            }
            tabIndex={0}
          >
            <span
              className="ReactVirtualized__Table__headerTruncatedText"
              title="Out"
            >
              Out
            </span>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 40px",
                "flex": "0 1 40px",
                "msFlex": "0 1 40px",
              }
            }
          >
            <span
              className="ReactVirtualized__Table__headerTruncatedText"
              title={null}
            />
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          onScroll={[Function]}
          role="rowgroup"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": -25,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Transactions matches snapshot with one transaction in a fiat account 1`] = `
<div>
  <TransactionDialog
    account={
      Object {
        "currency": "CAD",
        "id": 1,
        "institution": "TD",
        "name": "Checking",
      }
    }
    onCancel={[Function]}
    open={false}
    transaction={null}
  />
  <div
    className="TransactionsTableComponent-tableWrapper-1 "
  >
    <div
      className="MuiToolbar-root-19 MuiToolbar-regular-21 MuiToolbar-gutters-20 TableToolbar-root-14"
    >
      <div
        className="TableToolbar-title-18"
      >
        <div>
          <h6
            className="MuiTypography-root-23 MuiTypography-h6-40"
          >
            TD - Checking
          </h6>
          <span
            className="MuiTypography-root-23 MuiTypography-caption-33"
          >
            CAD
          </span>
        </div>
      </div>
      <div
        className="TableToolbar-spacer-16"
      />
      <div
        className="TableToolbar-actions-17"
      >
        <div
          className="withRouter-TransactionsToolbarComponent--buttons-9"
        >
          <div
            className="withRouter-TransactionsToolbarComponent--search-10"
          >
            <div
              className="withRouter-TransactionsToolbarComponent--searchIcon-11"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-59"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <div
              className="MuiInputBase-root-68 withRouter-TransactionsToolbarComponent--inputRoot-12"
              onClick={[Function]}
            >
              <input
                className="MuiInputBase-input-78 withRouter-TransactionsToolbarComponent--inputInput-13"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Search…"
                type="text"
                value=""
              />
            </div>
          </div>
          <a
            aria-current={null}
            aria-describedby={null}
            aria-label="Import transaction"
            className="MuiButtonBase-root-99 MuiIconButton-root-93"
            href="/accounts/1/import"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
            title="Import transaction"
          >
            <span
              className="MuiIconButton-label-98"
            >
              <svg
                className="withRouter-TransactionsToolbarComponent--importButton-8"
                style={
                  Object {
                    "width": "1.5rem",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M14,12L10,8V11H2V13H10V16M20,18V6C20,4.89 19.1,4 18,4H6C4.9,4 4,4.9 4,6V9H6V6H18V18H6V15H4V18C4,19.1 4.9,20 6,20H18C19.1,20 20,19.1 20,18Z"
                  style={Object {}}
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-112"
            />
          </a>
          <button
            aria-describedby={null}
            aria-label="New transaction"
            className="MuiButtonBase-root-99 MuiIconButton-root-93"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            title="New transaction"
            type="button"
          >
            <span
              className="MuiIconButton-label-98"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-59"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-112"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": 0,
          "overflow": "visible",
          "width": 0,
        }
      }
    >
      <div
        aria-colcount={6}
        aria-rowcount={3}
        className="ReactVirtualized__Table"
        role="grid"
        style={Object {}}
      >
        <div
          className="ReactVirtualized__Table__headerRow TransactionsTableComponent-headerRow-2 TransactionsTableComponent-oddRow-5"
          role="row"
          style={
            Object {
              "height": 25,
              "overflow": "hidden",
              "paddingRight": 0,
              "width": 0,
            }
          }
        >
          <div
            className="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 40px",
                "flex": "0 1 40px",
                "msFlex": "0 1 40px",
              }
            }
          >
            <span
              className="ReactVirtualized__Table__headerTruncatedText"
            >
              <span
                className="MuiButtonBase-root-99 MuiIconButton-root-93 MuiPrivateSwitchBase-root-108 MuiCheckbox-root-102 MuiCheckbox-colorSecondary-107"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiIconButton-label-98"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-59"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    checked={false}
                    className="MuiPrivateSwitchBase-input-111"
                    data-indeterminate={false}
                    onChange={[Function]}
                    type="checkbox"
                  />
                </span>
                <span
                  className="MuiTouchRipple-root-112"
                />
              </span>
            </span>
          </div>
          <div
            aria-label="Date"
            aria-sort="descending"
            className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 120px",
                "flex": "0 1 120px",
                "msFlex": "0 1 120px",
              }
            }
            tabIndex={0}
          >
            <span
              className="ReactVirtualized__Table__headerTruncatedText"
              title="Date"
            >
              Date
            </span>
            <svg
              className="ReactVirtualized__Table__sortableHeaderIcon ReactVirtualized__Table__sortableHeaderIcon--DESC"
              height={18}
              viewBox="0 0 24 24"
              width={18}
            >
              <path
                d="M7 10l5 5 5-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "1 1 200px",
                "flex": "1 1 200px",
                "msFlex": "1 1 200px",
              }
            }
          >
            <span
              className="ReactVirtualized__Table__headerTruncatedText"
              title="Description"
            >
              Description
            </span>
          </div>
          <div
            aria-label="In"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 130px",
                "flex": "0 1 130px",
                "msFlex": "0 1 130px",
              }
            }
            tabIndex={0}
          >
            <span
              className="ReactVirtualized__Table__headerTruncatedText"
              title="In"
            >
              In
            </span>
          </div>
          <div
            aria-label="Out"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 130px",
                "flex": "0 1 130px",
                "msFlex": "0 1 130px",
              }
            }
            tabIndex={0}
          >
            <span
              className="ReactVirtualized__Table__headerTruncatedText"
              title="Out"
            >
              Out
            </span>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 40px",
                "flex": "0 1 40px",
                "msFlex": "0 1 40px",
              }
            }
          >
            <span
              className="ReactVirtualized__Table__headerTruncatedText"
              title={null}
            />
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          onScroll={[Function]}
          role="rowgroup"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": -25,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</div>
`;
